# apex_scanner

./: .dockerignore  .gitignore  Dockerfile  README.md  RELEASE.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  web.py
.github/workflows/: ci.yml
apex_scanner/: __init__.py  desktop_gui.py  gui_runner.py  main.py  web.py
apex_scanner/templates/: __init__.py  dashboard.html
deploy/: README.md  apex_scanner.service
scanner/: .env.example  __init__.py  alerts.py  background.py  backtest.py  config.py  database.py  indicators.py  market_regime.py  requirements.txt  risk.py  scanner.py  scoring.py  support_resistance.py  universe.py  utils.py
templates/: dashboard.html  index.html
tests/: test_utils.py  test_web.py
